Fixed alignment in header and made it so home page now uses header.

--- a/src/client/pages/Page/components/NavigationBar/NavigationBar.scss
+++ b/src/client/pages/Page/components/NavigationBar/NavigationBar.scss
@@ -1,7 +1,7 @@
 .navigation-bar-container {
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .navigation-bar-items {
